--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -17,6 +17,15 @@
             "content": "myStrom Smart Home products make you save energy, set the lights to suit your mood and lets you keep an eye on your home. Simple and easy",
             "contentColor": "#FF0000",
             "link": "https://conradconnect.de/de/blog/smarter-leben-leicht-gemacht-mit-dem-neuen-einfachen-projekt-editor"
+        },
+        {
+            "title": "Control thermostat with MyStrom Button",
+            "titleColor": "#000000",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/simple_prj_newsletter%20(1).jpg",
+            "heroImageUrl" : "https://storage.cloud.google.com/conrad-connect-static-content/marketing/project-promotions/2560x1440-yellow-rose-free-website-background-image.jpg",  
+            "content": "myStrom Smart Home products make you save energy, set the lights to suit your mood and lets you keep an eye on your home. Simple and easy",
+            "contentColor": "#FF0000",
+            "link": "https://conradconnect.de/de/blog/smarter-leben-leicht-gemacht-mit-dem-neuen-einfachen-projekt-editor"
         }
     ]
 }
