--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -15,7 +15,7 @@
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/simple_prj_newsletter%20(1).jpg",
             "heroImageUrl" : "https://www.solidbackgrounds.com/images/2560x1440/2560x1440-yellow-solid-color-background.jpg",  
             "content": "myStrom Smart Home products make you save energy, set the lights to suit your mood and lets you keep an eye on your home. Simple and easy",
-            "contentColor": "#FF0000",
+            "contentColor": "#00FF00",
             "link": "https://conradconnect.de/de/blog/smarter-leben-leicht-gemacht-mit-dem-neuen-einfachen-projekt-editor"
         },
         {
