--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -10,12 +10,12 @@
             "link": "https://conradconnect-dashboard-staging.waylay.io/devices/nanoleaf"
         },
         {
-            "title": "Control thermostat with MyStrom Button",
-            "titleColor": "#0000FF",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/simple_prj_newsletter%20(1).jpg",
-            "heroImageUrl" : "https://www.solidbackgrounds.com/images/2560x1440/2560x1440-yellow-solid-color-background.jpg",  
-            "content": "myStrom Smart Home products make you save energy, set the lights to suit your mood and lets you keep an eye on your home. Simple and easy",
-            "contentColor": "#00FF00",
+            "title": "Home Connect für einen intelligenteren Haushalt",
+            "titleColor": "#000000",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/homeconnect_promoarea.png",
+            "heroImageUrl" : "",  
+            "content": "Kontrollieren Sie Ihre Haushaltsgeräte oder informieren Sie sich, sobald Ihre Spülmaschine bereit ist. Perfekt um den Überblick über Ihre Verbrauchsmittel zu behalten.",
+            "contentColor": "#000000",
             "link": "https://conradconnect.de/de/blog/smarter-leben-leicht-gemacht-mit-dem-neuen-einfachen-projekt-editor"
         },
         {
