--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -19,11 +19,11 @@
             "link": "https://dashboard.conradconnect.de/devices/boschhome"
         },
         {
-            "title": "Netatmo helps you keep the overview",
+            "title": "Mit Netatmo den Überblick behalten,
             "titleColor": "#000000",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/simple_prj_newsletter%20(1).jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea.jpg",  
-            "content": "Wether getting information about the temperatature, humidity or even the noise. Netatmo devices help you to give you the peace of mind",
+            "content": "Ob Informationen über die Temperatur, Luftfeuchtigkeit oder sogar die aktuelle Lautstärke. Netatmo-Geräte geben Ihnen die Gewissheit, dass alles in Ordnung ist",
             "contentColor": "#000000",
             "link": "https://dashboard.conradconnect.de/devices/netatmo"
         }
