--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -19,7 +19,7 @@
             "link": "https://dashboard.conradconnect.de/devices/boschhome"
         },
         {
-            "title": "Mit Netatmo den Überblick behalten,
+            "title": "Mit Netatmo den Überblick behalten",
             "titleColor": "#000000",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/simple_prj_newsletter%20(1).jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea.jpg",  
