--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -21,7 +21,7 @@
         {
             "title": "Mit Netatmo den Überblick behalten",
             "titleColor": "#000000",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/simple_prj_newsletter%20(1).jpg",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea.jpg",  
             "content": "Ob Informationen über die Temperatur, Luftfeuchtigkeit oder sogar die aktuelle Lautstärke. Netatmo-Geräte geben Ihnen die Gewissheit, dass alles in Ordnung ist",
             "contentColor": "#000000",
