--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -20,11 +20,11 @@
         },
         {
             "title": "Mit Netatmo den Überblick behalten",
-            "titleColor": "#000000",
+            "titleColor": "#b62020",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea.jpg",  
             "content": "Ob Informationen über die Temperatur, Luftfeuchtigkeit oder sogar die aktuelle Lautstärke. Netatmo-Geräte geben Ihnen die Gewissheit, dass alles in Ordnung ist",
-            "contentColor": "#000000",
+            "contentColor": "#ffffff",
             "link": "https://dashboard.conradconnect.de/devices/netatmo"
         }
     ]
