--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -20,7 +20,7 @@
         },
         {
             "title": "Netatmo helps you keep the overview",
-            "titleColor": "#b62020",
+            "titleColor": "#ffee68",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea.jpg",  
             "content": "Wether getting information about the temperatature, humidity or even the noise. Netatmo devices help you to give you the peace of mind",
