--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -2,7 +2,7 @@
     "projectPromotions": [
          {
             "title": "Licht für jede Stimmung mit Nanoleaf",
-            "titleColor": "#FFFFFF",
+            "titleColor": "#e8b8ff",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea_mobile.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea.jpg",  
             "content": "Lassen Sie Ihrer Kreativität freien Lauf und kreieren Sie das perfekt Ambiente für jeden Moment des Tages",
