--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -2,7 +2,7 @@
     "projectPromotions": [
          {
             "title": "Lights for every mood with Nanoleaf",
-            "titleColor": "#FFFFFF",
+            "titleColor": "#e8b8ff",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea_mobile.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea.jpg",  
             "content": "Set the ideal mood for any occasion, wake up to the sunrise, entertain family and friends, and automate your lights throughout the day",
