--- a/devices-and-apps_promotions_de.json
+++ b/devices-and-apps_promotions_de.json
@@ -1,22 +1,31 @@
 {
   "devicesAndAppsPromotions": [
-    {
-      "title": "Neue smarte Services",
-      "titleColor": "#000000",
-      "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/devices-and-apps-img1.jpg",
-      "heroImageUrl" : "",
-      "content": "Neben Conrad können Sie ab sofort auch automatische Bestellungen bei voelkner, SMDV und Digitalo in Ihre smarten Projekte einbauen!",
-      "contentColor": "#FF0000",
-      "link": "https://dashboard.conradconnect.de/"
-    },
-    {
-        "title": "Conrad Connect auf der IFA 2019",
-        "titleColor": "#000000",
-        "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/devices-and-apps-img2.jpg.jpg",
-        "heroImageUrl" : "",
-        "content": "Auf der Internationalen Funkausstellung (IFA) wird Conrad Connect auch dieses Jahr wieder die Gelegenheit nutzen, um allen Technik-Enthusiasten sowie potentiellen Business Partnern unsere neuesten Innovationen vorzustellen. Vom 06. bis 11. September 2019 finden Sie uns in Halle 25, an Stand 333 und können Conrad Connect live erleben.",
-        "contentColor": "#FF0000",
-        "link": "https://www.conradconnect.com/de/blog/conrad-connect-auf-der-ifa-2019"
-    }
+         {
+            "title": "Licht für jede Stimmung mit Nanoleaf",
+            "titleColor": "#e8b8ff",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea_mobile.jpg",
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea.jpg",  
+            "content": "Lassen Sie Ihrer Kreativität freien Lauf und kreieren Sie das perfekt Ambiente für jeden Moment des Tages",
+            "contentColor": "#FFFFFF",
+            "link": "https://dashboard.conradconnect.de/devices/nanoleaf"
+        },
+        {
+            "title": "Home Connect für einen intelligenteren Haushalt",
+            "titleColor": "#000000",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/homeconnect_promoarea.png",
+            "heroImageUrl" : "",  
+            "content": "Kontrollieren Sie Ihre Haushaltsgeräte oder informieren Sie sich, sobald Ihre Spülmaschine bereit ist. Perfekt um den Überblick über Ihre Verbrauchsmittel zu behalten.",
+            "contentColor": "#000000",
+            "link": "https://dashboard.conradconnect.de/devices/boschhome"
+        },
+        {
+            "title": "Mit Netatmo den Überblick behalten",
+            "titleColor": "#ffee68",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea.jpg",  
+            "content": "Ob Informationen über die Temperatur, Luftfeuchtigkeit oder sogar die aktuelle Lautstärke. Netatmo-Geräte geben Ihnen die Gewissheit, dass alles in Ordnung ist",
+            "contentColor": "#ffffff",
+            "link": "https://dashboard.conradconnect.de/devices/netatmo"
+        }
   ]
 }
