--- a/devices-and-apps_promotions_en.json
+++ b/devices-and-apps_promotions_en.json
@@ -1,22 +1,31 @@
 {
   "devicesAndAppsPromotions": [
-    {
-      "title": "New Smart Services",
-      "titleColor": "#000000",
-      "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/devices-and-apps-img1.jpg",
-      "heroImageUrl" : "",
-      "content": "In addition to Conrad, you can now also integrate automatic orders with voelkner, SMDV, digitalo and müsli.de into your smart projects!",
-      "contentColor": "#FF0000",
-      "link": "https://dashboard.conradconnect.de/"
-    },
-    {
-        "title": "Conrad Connect at the IFA 2019",
-        "titleColor": "#000000",
-        "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/devices-and-apps-img2.jpg.jpg",
-        "heroImageUrl" : "",
-        "content": "At the Internationale Funkausstellung (IFA), Conrad Connect will once again take the opportunity to introduce the latest innovations to all technology enthusiasts and potential business partners. From September 6 to 11 2019, you will find us in Hall 25, Stand 333 and can experience Conrad Connect live.",
-        "contentColor": "#FF0000",
-        "link": "https://www.conradconnect.com/de/blog/conrad-connect-auf-der-ifa-2019"
-    }
+         {
+            "title": "Lights for every mood with Nanoleaf",
+            "titleColor": "#e8b8ff",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea_mobile.jpg",
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea.jpg",  
+            "content": "Set the ideal mood for any occasion, wake up to the sunrise, entertain family and friends, and automate your lights throughout the day",
+            "contentColor": "#FFFFFF",
+            "link": "https://dashboard.conradconnect.de/devices/nanoleaf"
+        },
+        {
+            "title": "Home Connect for a smarter household",
+            "titleColor": "#000000",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/homeconnect_promoarea.png",
+            "heroImageUrl" : "",  
+            "content": "Control your household appliances or get informed as soon as your dishwasher is ready. Perfect for keeping track of your consumables.",
+            "contentColor": "#000000",
+            "link": "https://dashboard.conradconnect.de/devices/boschhome"
+        },
+        {
+            "title": "Netatmo helps you keep the overview",
+            "titleColor": "#ffee68",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea.jpg",  
+            "content": "Wether getting information about the temperatature, humidity or even the noise. Netatmo devices help you to give you the peace of mind",
+            "contentColor": "#ffffff",
+            "link": "https://dashboard.conradconnect.de/devices/netatmo"
+        }
   ]
 }
