--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -4,7 +4,7 @@
             "title": "Lights for every mood with Nanoleaf",
             "titleColor": "#e8b8ff",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea_mobile.jpg",
-            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/stock-photo-young-couple-running-282130871%20-%20Kopie.jpg",  
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/hero-test1.jpg",  
             "content": "Set the ideal mood for any occasion, wake up to the sunrise, entertain family and friends, and automate your lights throughout the day",
             "contentColor": "#FFFFFF",
             "link": "https://dashboard.conradconnect.de/devices/nanoleaf"
