--- a/devices-and-apps_promotions_en.json
+++ b/devices-and-apps_promotions_en.json
@@ -5,7 +5,7 @@
             "titleColor": "#e8b8ff",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea_mobile.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea.jpg",  
-            "content": "Set the ideal mood for any occasion, wake up to the sunrise, entertain family and friends, and automate your lights throughout the day",
+            "content": "Set the ideal mood for any occasion: Wake up to a sunrise, entertain friends and family, and automate your lights throughout the day.",
             "contentColor": "#FFFFFF",
             "link": "https://dashboard.conradconnect.de/devices/nanoleaf"
         },
@@ -14,16 +14,16 @@
             "titleColor": "#000000",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/homeconnect_promoarea.png",
             "heroImageUrl" : "",  
-            "content": "Control your household appliances or get informed as soon as your dishwasher is ready. Perfect for keeping track of your consumables.",
+            "content": "Control your household appliances or get informed as soon as your dishwasher is ready. Perfect for the whole overview in the household.",
             "contentColor": "#000000",
             "link": "https://dashboard.conradconnect.de/devices/boschhome"
         },
         {
-            "title": "Netatmo helps you keep the overview",
+            "title": "With Netatmo you stay in control",
             "titleColor": "#ffee68",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea.jpg",  
-            "content": "Wether getting information about the temperatature, humidity or even the noise. Netatmo devices help you to give you the peace of mind",
+            "content": "Weather getting information about the temperature, humidity or even noise: Netatmo devices give you peace of mind that you have everything under control.",
             "contentColor": "#ffffff",
             "link": "https://dashboard.conradconnect.de/devices/netatmo"
         }
