--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -3,8 +3,8 @@
          {
             "title": "More motivation during training",
             "titleColor": "#e8b8ff",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea_mobile.jpg",
-            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/hero-test1.jpg",  
+            "imageUrl": "https://dashboard.conradconnect.de/img/projects/fitness.jpg",
+            "heroImageUrl" : "",  
             "content": "Motivate yourself and others by sharing your step count with a text message once you reach a certain goal.",
             "contentColor": "#FFFFFF",
             "link": "https://dashboard.conradconnect.de/projects/public/598dbf8b1981b52897b6f29a"
@@ -12,7 +12,7 @@
         {
             "title": "The perfect start to the day",
             "titleColor": "#000000",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/homeconnect_promoarea.png",
+            "imageUrl": "https://dashboard.conradconnect.de/img/projects/general.jpg",
             "heroImageUrl" : "",  
             "content": "Automate your heating, music and lighting to easily wake up and start the day comfortably.",
             "contentColor": "#000000",
@@ -22,7 +22,7 @@
             "title": "Simply live healthier",
             "titleColor": "#ffee68",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
-            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea.jpg",  
+            "heroImageUrl" : "",  
             "content": "Get notified automatically by smart lights to open your window when the air quality in the room drops.",
             "contentColor": "#ffffff",
             "link": "https://dashboard.conradconnect.de/projects/public/59ce4a7b23ded67578391b38"
