--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -4,7 +4,7 @@
             "title": "More motivation during training",
             "titleColor": "#e8b8ff",
             "imageUrl": "https://dashboard.conradconnect.de/img/projects/fitness.jpg",
-            "heroImageUrl" : "",  
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_promoarea.jpg",  
             "content": "Motivate yourself and others by sharing your step count with a text message once you reach a certain goal.",
             "contentColor": "#FFFFFF",
             "link": "https://dashboard.conradconnect.de/projects/public/598dbf8b1981b52897b6f29a"
