--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -22,7 +22,7 @@
             "title": "Simply live healthier",
             "titleColor": "#ffee68",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
-            "heroImageUrl" : "",  
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_promoarea.jpg",  
             "content": "Get notified automatically by smart lights to open your window when the air quality in the room drops.",
             "contentColor": "#ffffff",
             "link": "https://dashboard.conradconnect.de/projects/public/59ce4a7b23ded67578391b38"
