--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -13,7 +13,7 @@
             "title": "Der perfekte Start in den Tag",
             "titleColor": "#000000",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/homeconnect_promoarea.png",
-            "heroImageUrl" : "",  
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/perfekter_start_promoarea.jpg",  
             "content": "https://dashboard.conradconnect.de/img/projects/general.jpg",
             "contentColor": "#000000",
             "link": "https://dashboard.conradconnect.de/devices/boschhome"
