--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -13,7 +13,7 @@
             "title": "The perfect start to the day",
             "titleColor": "#000000",
             "imageUrl": "https://dashboard.conradconnect.de/img/projects/general.jpg",
-            "heroImageUrl" : "",  
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/perfekter_start_promoarea.jpg",  
             "content": "Automate your heating, music and lighting to easily wake up and start the day comfortably.",
             "contentColor": "#000000",
             "link": "https://dashboard.conradconnect.de/projects/public/5c8a4d16327e2ecbdde3c22b"
