--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -2,7 +2,7 @@
     "projectPromotions": [
          {
             "title": "Mehr Motivation beim Training",
-            "titleColor": "#e8b8ff",
+            "titleColor": "#feb7ae",
             "imageUrl": "https://dashboard.conradconnect.de/img/projects/fitness.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/mehr_motivation_promoarea.jpg",  
             "content": "Motivieren Sie sich und andere, indem Sie Ihre Schrittzahl per SMS teilen, sobald Sie ein bestimmtes Ziel erreicht haben.",
