--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -20,7 +20,7 @@
         },
         {
             "title": "Einfach gesünder leben",
-            "titleColor": "#ffee68",
+            "titleColor": "#2dcbfc",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_promoarea.jpg",  
             "content": "Lassen Sie sich automatisch von smarten Lampen benachrichtigen, um Ihr Fenster zu öffnen, wenn die Luftqualität im Raum sinkt.",
