--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -12,7 +12,7 @@
         {
             "title": "The perfect start to the day",
             "titleColor": "#000000",
-            "imageUrl": "https://dashboard.conradconnect.de/img/projects/general.jpg",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/perfekter_start_mobile_promoarea.png",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/perfekter_start_promoarea.jpg",  
             "content": "Automate your heating, music and lighting to easily wake up and start the day comfortably.",
             "contentColor": "#000000",
