--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -21,7 +21,7 @@
         {
             "title": "Simply live healthier",
             "titleColor": "#2dcbfc",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_mobile_promoarea.png,
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_mobile_promoarea.png",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_promoarea.jpg",  
             "content": "Get notified automatically by smart lights to open your window when the air quality in the room drops.",
             "contentColor": "#ffffff",
