--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -3,7 +3,7 @@
          {
             "title": "Mehr Motivation beim Training",
             "titleColor": "#feb7ae",
-            "imageUrl": "https://dashboard.conradconnect.de/img/projects/fitness.jpg",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/mehr_motivation_mobile_promoarea.png",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/mehr_motivation_promoarea.jpg",  
             "content": "Motivieren Sie sich und andere, indem Sie Ihre Schrittzahl per SMS teilen, sobald Sie ein bestimmtes Ziel erreicht haben.",
             "contentColor": "#FFFFFF",
