--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -3,7 +3,7 @@
          {
             "title": "More motivation during training",
             "titleColor": "#feb7ae",
-            "imageUrl": "https://dashboard.conradconnect.de/img/projects/fitness.jpg",
+            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/mehr_motivation_mobile_promoarea.png",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/mehr_motivation_promoarea.jpg",  
             "content": "Motivate yourself and others by sharing your step count with a text message once you reach a certain goal.",
             "contentColor": "#FFFFFF",
