--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -20,11 +20,11 @@
         },
         {
             "title": "Einfach gesünder leben",
-            "titleColor": "#2dcbfc",
+            "titleColor": "#45434e",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_mobile_promoarea.png",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_promoarea.jpg",  
             "content": "Lassen Sie sich automatisch von smarten Lampen benachrichtigen, um Ihr Fenster zu öffnen, wenn die Luftqualität im Raum sinkt.",
-            "contentColor": "#ffffff",
+            "contentColor": "#45434e",
             "link": "https://dashboard.conradconnect.de/devices/netatmo"
         }
     ]
