--- a/project_promotions_en.json
+++ b/project_promotions_en.json
@@ -20,11 +20,11 @@
         },
         {
             "title": "Simply live healthier",
-            "titleColor": "#2dcbfc",
+            "titleColor": "#45434e",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_mobile_promoarea.png",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_promoarea.jpg",  
             "content": "Get notified automatically by smart lights to open your window when the air quality in the room drops.",
-            "contentColor": "#ffffff",
+            "contentColor": "#45434e",
             "link": "https://dashboard.conradconnect.de/projects/public/59ce4a7b23ded67578391b38"
         }
     ]
