--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -14,7 +14,7 @@
             "titleColor": "#000000",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/perfekter_start_mobile_promoarea.png",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/perfekter_start_promoarea.jpg",  
-            "content": "https://dashboard.conradconnect.de/img/projects/general.jpg",
+            "content": "Automatisieren Sie Ihre Heizung, Musik und Beleuchtung, um mühelos aufzuwachen und komfortabel in den Tag zu starten.",
             "contentColor": "#000000",
             "link": "https://dashboard.conradconnect.de/devices/boschhome"
         },
