--- a/project_promotions_de.json
+++ b/project_promotions_de.json
@@ -7,7 +7,7 @@
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/mehr_motivation_promoarea.jpg",  
             "content": "Motivieren Sie sich und andere, indem Sie Ihre Schrittzahl per SMS teilen, sobald Sie ein bestimmtes Ziel erreicht haben.",
             "contentColor": "#FFFFFF",
-            "link": "https://dashboard.conradconnect.de/devices/nanoleaf"
+            "link": "https://dashboard.conradconnect.de/projects/public/598dbf8b1981b52897b6f29a"
         },
         {
             "title": "Der perfekte Start in den Tag",
@@ -16,7 +16,7 @@
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/perfekter_start_promoarea.jpg",  
             "content": "Automatisieren Sie Ihre Heizung, Musik und Beleuchtung, um mühelos aufzuwachen und komfortabel in den Tag zu starten.",
             "contentColor": "#000000",
-            "link": "https://dashboard.conradconnect.de/devices/boschhome"
+            "link": "https://dashboard.conradconnect.de/projects/public/5c8a4d16327e2ecbdde3c22b"
         },
         {
             "title": "Einfach gesünder leben",
@@ -25,7 +25,7 @@
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/gesuender_leben_promoarea.jpg",  
             "content": "Lassen Sie sich automatisch von smarten Lampen benachrichtigen, um Ihr Fenster zu öffnen, wenn die Luftqualität im Raum sinkt.",
             "contentColor": "#45434e",
-            "link": "https://dashboard.conradconnect.de/devices/netatmo"
+            "link": "https://dashboard.conradconnect.de/projects/public/59ce4a7b23ded67578391b38"
         }
     ]
 }
