--- a/devices-and-apps_promotions_en.json
+++ b/devices-and-apps_promotions_en.json
@@ -4,7 +4,7 @@
             "title": "Design your smart home effortlessly with Tuya",
             "titleColor": "#e8b8ff",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea_mobile.jpg",
-            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/shutterstock_1264041919%20-%20Kopie.jpg",  
+            "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/couch_tuya.jpg",  
             "content": "Make your home more intelligent: With high efficiency and great flexibility, you can create smart experiences in all aspects of your life.",
             "contentColor": "#FFFFFF",
             "link": "https://dashboard.conradconnect.de/devices/tuya"
