--- a/devices-and-apps_promotions_en.json
+++ b/devices-and-apps_promotions_en.json
@@ -3,7 +3,7 @@
          {
             "title": "Design your smart home effortlessly with Tuya",
             "titleColor": "#e8b8ff",
-            "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea_mobile.jpg",
+            "imageUrl": "https://dashboard.conradconnect.de/img/providers/tuya/product.png",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/couch_tuya.jpg",  
             "content": "Make your home more intelligent: With high efficiency and great flexibility, you can create smart experiences in all aspects of your life.",
             "contentColor": "#FFFFFF",
