--- a/devices-and-apps_promotions_en.json
+++ b/devices-and-apps_promotions_en.json
@@ -6,7 +6,7 @@
             "imageUrl": "https://dashboard.conradconnect.de/img/providers/tuya/product.png",
             "heroImageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/couch2.jpg",  
             "content": "Make your home more intelligent: With high efficiency and great flexibility, you can create smart experiences in all aspects of your life.",
-            "contentColor": "#0390fc",
+            "contentColor": "#161617",
             "link": "https://dashboard.conradconnect.de/devices/tuya"
          },
          {
