--- a/devices-and-apps_promotions_en.json
+++ b/devices-and-apps_promotions_en.json
@@ -4,9 +4,9 @@
             "title": "Design your smart home effortlessly with Tuya",
             "titleColor": "#FFFFFF",
             "imageUrl": "https://dashboard.conradconnect.de/img/providers/tuya/product.png",
-            "heroImageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/couch2.jpg",  
+            "heroImageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/shutterstock_1264041919%20_RESIZED.jpg",  
             "content": "Make your home more intelligent: With high efficiency and great flexibility, you can create smart experiences in all aspects of your life.",
-            "contentColor": "#161617",
+            "contentColor": "#fc6f03",
             "link": "https://dashboard.conradconnect.de/devices/tuya"
          },
          {
