--- a/devices-and-apps_promotions_en.json
+++ b/devices-and-apps_promotions_en.json
@@ -5,8 +5,8 @@
             "titleColor": "#FFFFFF",
             "imageUrl": "https://dashboard.conradconnect.de/img/providers/tuya/product.png",
             "heroImageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/shutterstock_1264041919%20_RESIZED.jpg",  
-            "content": "Make your home more intelligent: With high efficiency and great flexibility, you can create smart experiences in all aspects of your life.",
-            "contentColor": "#fc6f03",
+            "content": "",
+            "contentColor": "#FFFFFF",
             "link": "https://dashboard.conradconnect.de/devices/tuya"
          },
          {
