--- a/devices-and-apps_promotions_de.pro.json
+++ b/devices-and-apps_promotions_de.pro.json
@@ -1,7 +1,7 @@
 {
   "devicesAndAppsPromotions": [
           {
-            "title": "Mit Tuya mühelos das Smart Home gestalten",
+            "title": "Lorem ipsum dolor sit amet, consectetur",
             "titleColor": "#FFFFFF",
             "imageUrl": "https://dashboard.conradconnect.de/img/providers/tuya/product.png",
             "heroImageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/devices-and-apps-promotions/shutterstock_1264041919%20_RESIZED.jpg",
@@ -10,29 +10,29 @@
             "link": "https://dashboard.conradconnect.de/devices/tuya"
          },
          {
-            "title": "Licht für jede Stimmung mit Nanoleaf",
+            "title": "Ut enim ad minim veniam, quis nostrud exercitation ullamco",
             "titleColor": "#e8b8ff",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea_mobile.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/nanoleaf_promoarea.jpg",
-            "content": "Schaffen Sie die ideale Stimmung für jeden Anlass: Wachen Sie mit einem Sonnenaufgang auf, unterhalten Sie Freunde und Familie oder automatisieren Sie Ihre Lichter den ganzen Tag über.",
+            "content": "Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.",
             "contentColor": "#FFFFFF",
             "link": "https://dashboard.conradconnect.de/devices/nanoleaf"
         },
         {
-            "title": "Home Connect für einen smarten Haushalt",
+            "title": "Excepteur sint occaecat cupidatat non proident, sunt in culpa",
             "titleColor": "#000000",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/homeconnect_promoarea.png",
             "heroImageUrl" : "",
-            "content": "Kontrollieren Sie Ihre Haushaltsgeräte oder lassen Sie sich informieren, sobald Ihre Spülmaschine bereit ist. Perfekt für den gesamten Überblick im Haushalt.",
+            "content": "Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.",
             "contentColor": "#000000",
             "link": "https://dashboard.conradconnect.de/devices/boschhome"
         },
         {
-            "title": "Mit Netatmo behalten Sie die Kontrolle",
+            "title": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem",
             "titleColor": "#ffee68",
             "imageUrl": "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea_mobile.jpg",
             "heroImageUrl" : "https://storage.googleapis.com/conrad-connect-static-content/marketing/project-promotions/netatmo_promoarea.jpg",
-            "content": "Ob Informationen über die Temperatur, Luftfeuchtigkeit oder sogar Lärm: Netatmo-Geräte geben Ihnen die Gewissheit, dass Sie alles unter Kontrolle haben.",
+            "content": "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores.",
             "contentColor": "#ffffff",
             "link": "https://dashboard.conradconnect.de/devices/netatmo"
         }
